tests/negative/neg_own_use_after_move.safe
-- Test: neg_own_use_after_move
-- Description: Reading an inferred-reference value after it has been moved.
-- Expected: REJECT use_after_move

package use_after_move_test

   type item is record
      id    : integer
      count : integer
      next  : item

   function read_after_move
      source : not null item = (id = 1, count = 10, next = null)
      target : item = null
      v      : integer

      target = source
      v = source.count  -- ERROR: dereference of moved variable
